<resources>
    <string name="app_name">Playground</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="action_log_in">LOG IN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_sign_in_short">LOG IN</string>
    <string name="action_auto_login">AUTO LOGIN</string>
    <string name="action_copyright">Copyrightⓒ 2016 JJSTREET All rights reserved</string>
    <string name="error_invalid_email">E-mail이 유효하지 않습니다.</string>
    <string name="error_invalid_password">비밀번호가 유효하지 않습니다.</string>
    <string name="error_incorrect_password">비밀번호를 확인해주세요.</string>
    <string name="error_field_required">This field is required</string>
<<<<<<< HEAD
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="radio_agree">동의합니다.</string>
    <string name="radio_no_agree">동의하지 않습니다.</string>
    <string name="text_clause">1. 개인정보의 처리 목적 (‘www.playground.com’이하 ‘playground’) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.
- 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른 본인 식별.인증, 회원자격 유지.관리, 물품 또는 서비스 공급에 따른 금액 결제, 물품 또는 서비스의 공급.배송 등


2. 개인정보의 처리 및 보유 기간

① (‘www.playground.com’이하 ‘playground’) 은(는) 정보주체로부터 개인정보를 수집할 때 동의 받은 개인정보 보유․이용기간 또는 법령에 따른 개인정보 보유․이용기간 내에서 개인정보를 처리․보유합니다.

② 구체적인 개인정보 처리 및 보유 기간은 다음과 같습니다.
☞ 아래 예시를 참고하여 개인정보 처리업무와 개인정보 처리업무에 대한 보유기간 및 관련 법령, 근거 등을 기재합니다.
(예시)- 고객 가입 및 관리 : 서비스 이용계약 또는 회원가입 해지시까지, 다만 채권․채무관계 잔존시에는 해당 채권․채무관계 정산시까지
- 전자상거래에서의 계약․청약철회, 대금결제, 재화 등 공급기록 : 5년


3. 개인정보의 제3자 제공

(‘www.playground.com’이하 ‘playground) 은(는) 정보주체의 별도 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조에 해당하는 경우 외에는 개인정보를 제3자에게 제공하지 않습니다.</string>

=======
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="baseball">야구</string>
    <string name="basketball">농구</string>
    <string name="soccer">축구</string>
    <string name="table_tennis">탁구</string>
    <string name="foot_volleyball">족구</string>
>>>>>>> 4b627c9b805a86cea84e724372f16544f5b7cbaa
</resources>
