
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.peesit.playground.LoginActivity"
    android:background="@color/colorBackGround">

    <!-- Login progress -->


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <!-- Logo 이미지 생성 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/logo_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo2"
                    android:layout_margin="20dp"/>
            </LinearLayout>

            <!-- E-mail 주소 입력칸 -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    />

            </android.support.design.widget.TextInputLayout>


            <!-- PASSWORD 입력칸 -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <!-- ID와 PW찾기 -->



            <!-- LOGIN 과 회원가입 버튼을 묶어줌 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
<<<<<<< HEAD
                android:layout_gravity="bottom"
                android:layout_marginTop="40dp"
=======
>>>>>>> 5d63b3c94c98620771b8e0a50695406d046983fc
                >
                <Button
                    android:id="@+id/email_sign_up_button"
<<<<<<< HEAD
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold"
                    android:background="@color/colorButtonBackGround"
                    android:clickable="true" />
                <Button
                    android:id="@+id/email_log_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:text="@string/action_log_in"
                    android:textStyle="bold"
                    android:background="@color/colorButtonBackGround"
                    android:clickable="true" />


=======
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold"
                    android:background="@color/colorButtonBackGround"
                    android:clickable="true" />
                <Button
                android:id="@+id/email_log_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/action_log_in"
                android:textStyle="bold"
                android:background="@color/colorButtonBackGround"
                android:clickable="true" />
>>>>>>> 5d63b3c94c98620771b8e0a50695406d046983fc
            </LinearLayout>

            <!-- 자동로그인 CheckBox 구성 -->
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_auto_login"
                android:id="@+id/checkBox"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:checked="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
<<<<<<< HEAD
                android:id="@+id/Findbtn"
                android:layout_marginTop="20dp"
                android:text="DO YOU FORGOT YOUR ID/PW ?"
                android:layout_gravity="center"
                android:padding="10dp"
                android:background="@color/colorButtonBackGround" />
=======
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@color/colorButtonBackGround"
                android:text="DO YOU FORGOT YOUR ID/PW ?"
                android:layout_gravity="center" />
>>>>>>> 5d63b3c94c98620771b8e0a50695406d046983fc

        </LinearLayout>

    </ScrollView>
    <!-- Copyright -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
<<<<<<< HEAD
            android:layout_marginTop="35dp"
=======
            android:layout_marginTop="45dp"
>>>>>>> 5d63b3c94c98620771b8e0a50695406d046983fc
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/action_copyright"
            android:id="@+id/copyright"
            android:layout_gravity="center" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
